<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HiitTimer</string>
    <string name="action_settings">Settings</string>
    <string name="warm_up">Warm Up (mm:ss)</string>
    <string name="rest">Rest (mm:ss)</string>
    <string name="cool_down">Cool Down (mm:ss)</string>
    <string name="work">Work (mm:ss)</string>
    <string name="reps">Reps</string>
    <string name="reset">Reset</string>
    <string name="load">Load</string>
    <string name="go">Go</string>
    <string name="save">Save</string>

</resources>
