<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetTimerActivity">

    <TextView
        android:id="@+id/warmUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/warm_up"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <NumberPicker
        android:id="@+id/warmUpMinPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/warmUpTextView"
        android:background="#ffff8241"/>

    <NumberPicker
        android:id="@+id/warmUpSecPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/warmUpMinPicker"
        android:layout_toEndOf="@+id/warmUpMinPicker"
        android:background="#ffff8241" />

    <NumberPicker
        android:id="@+id/coolDownSecPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/warmUpSecPicker"
        android:background="#ff597fff"/>

    <NumberPicker
        android:id="@+id/coolDownMinPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/coolDownSecPicker"
        android:layout_toStartOf="@+id/coolDownSecPicker"
        android:background="#ff597fff" />

    <TextView
        android:id="@+id/coolDownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/coolDownSecPicker"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/coolDownMinPicker"
        android:layout_toStartOf="@+id/coolDownSecPicker"
        android:text="@string/cool_down"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/workTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/warmUpMinPicker"
        android:text="@string/work"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <NumberPicker
        android:id="@+id/workMinPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/workTextView"
        android:background="#ffff251e" />

    <TextView
        android:id="@+id/repsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/workMinPicker"
        android:text="@string/reps"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <NumberPicker
        android:id="@+id/repCountPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/repsTextView" />

    <NumberPicker
        android:id="@+id/workSecPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/warmUpSecPicker"
        android:layout_alignTop="@+id/workMinPicker"
        android:background="#ffff251e" />

    <NumberPicker
        android:id="@+id/restSecPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/workSecPicker"
        android:background="#ff22ff25" />

    <NumberPicker
        android:id="@+id/restMinPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/workSecPicker"
        android:layout_toStartOf="@+id/restSecPicker"
        android:background="#ff22ff25" />

    <TextView
        android:id="@+id/restTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restSecPicker"
        android:layout_alignStart="@+id/coolDownMinPicker"
        android:text="@string/rest"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/restMinPicker"
        android:layout_alignTop="@+id/repCountPicker"
        android:text="Total: 00:00"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:layout_alignBottom="@+id/repCountPicker"
        android:layout_toEndOf="@+id/workTextView" />

    <!--TODO add start button-->
    <!--TODO add save & restore buttons-->
    <!--TODO add reset button-->

</RelativeLayout>
